--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /img
+/.vscode
 
 # Created by https://www.toptal.com/developers/gitignore/api/react
 # Edit at https://www.toptal.com/developers/gitignore?templates=react
